Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Fri Sep 7 2012 Thunor <thunorsif@hotmail.com>
- Added examples/eventbox/eventbox.

* Thu Sep 6 2012 Thunor <thunorsif@hotmail.com>
- Added support for the "shadow-type" tag attribute to widgets that
  are placed inside a viewport as the default is GTK_SHADOW_IN.
- Added the "theme-icon-size" tag attribute to the button widget.
- Added the "stock-icon-size" tag attribute to the button widget.
- Added the "theme-icon-size" tag attribute to the pixmap widget.
- Added the "stock-icon-size" tag attribute to the pixmap widget.
- New widget: <eventbox>.

* Wed Sep 5 2012 Thunor <thunorsif@hotmail.com>
- Updated examples/table/table.
- Moved the table widget's selected-row check to after signal connection
  as it wasn't firing on initial refresh.
- Fixed leading zero issue with strnatcmp.
- Added the "freeze-thaw" tag attribute to the table widget to stop
  rendering when adding data and to resume rendering when finished.
- Added save action function support to the tree widget.
- Added support for the tag attributes "h/vscrollbar-policy" to all
  scrolled window widgets (edit, h/vbox, list, table, terminal, tree).

* Tue Sep 4 2012 Thunor <thunorsif@hotmail.com>
- Added support for column sorting to the table widget.
- Added the "column-header-active" and "column-visible" tag attributes
  to the table widget enabling column-header locking and column hiding.
- Modified token_store_attr() to convert tag attribute names passed
  in from the XML separated with underscores to hyphenated strings.

* Sat Sep 1 2012 Thunor <thunorsif@hotmail.com>
- Added the "selected-row" tag attribute to the table widget to enable
  selecting a default row on initialisation and refresh (the firing of
  signals can be prevented with "block-function-signals").
- Added multiple selection mode to the table widget and updated the
  envvar export functions and removeselected action to cope with it.