@@ -92,7 +92,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkEventBox.html">GtkEventBox</a>
 
 <pre>
 &lt;eventbox tag_attr="value"...&gt;
-	widget...
+	widget
 	&lt;variable&gt;varname&lt;/variable&gt;
 	&lt;sensitive&gt;state&lt;/sensitive&gt;
 	&lt;action signal="type"&gt;activity&lt;/action&gt;...
@@ -206,7 +206,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkEventBox.html">GtkEventBox</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-07 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-08 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
