@@ -92,7 +92,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkWindow.html">GtkWindow</a>
 
 <pre>
 &lt;window tag_attr="value"...&gt;
-	widget...
+	widget
 	&lt;label&gt;title&lt;/label&gt;
 	&lt;variable&gt;varname&lt;/variable&gt;
 	&lt;input&gt;command&lt;/input&gt;
@@ -218,7 +218,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkWindow.html">GtkWindow</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-07 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-08 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
